# multiagent-finance

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
article/my_template/: Makefile  main.tex  refs.bib  sbc2025.cls
article/my_template/sections/: 01-introducao.tex  02-trabalhos-relacionados.tex  03-arquitetura.tex  04-metodologia.tex  05-resultados.tex  06-ameacas.tex  07-conclusao.tex
data/results/: article_comparison_metrics.csv  article_comparison_metrics.json
examples/: sample_portfolio.json
examples/portfolios/: portfolios.json
scripts/: benchmark_models.py  generate_article_analysis.py  generate_snapshot.py  generate_workload.py  run_baselines.py  run_enriched_subset.sh  run_overnight_remaining.sh  smoke.py
src/mafin/: config.py  schema.py
src/mafin/agents/: base.py  bear.py  bull.py  debate.py  fundamental.py  macro.py  moderator.py  risk.py  sentiment.py  technical.py
src/mafin/baselines/: __init__.py  prompts.py  runner.py  single.py
src/mafin/data/: __init__.py  compact.py  news_policy.py  portfolio.py  snapshot.py  snapshot_builder.py  workload.py
src/mafin/data/providers/: __init__.py  bcb_macro.py  brave_news.py  yfinance_fundamentals.py  yfinance_prices.py
src/mafin/debate/: __init__.py  convergence.py
src/mafin/graph/: build.py  metrics.py  state.py
src/mafin/llm/: ollama.py
src/mafin/tracing/: __init__.py  context.py  store.py
tests/: test_baselines.py  test_graph_build.py  test_portfolio.py
