[project]
name = "mafin"
version = "0.1.0"
description = "Multi-agent personalized portfolio diagnosis (ENIAC 2026)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "yfinance>=0.2.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mafin"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
